fix: revert emoji to be stacked above title on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1448,8 +1448,8 @@ h4 {
     font-size: 2.5rem;
   }
   .reader__title-container {
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: flex-start;
     text-align: left;
     gap: 12px;
